<resources>
    <string name="app_name">Multi Colors</string>
    <string name="mc_select_theme">Select Theme</string>
    <string name="mc_manage_themes">Manage Themes</string>
    <string name="mc_edit">Edit</string>
    <string name="mc_solid_colors">Solid Colors</string>
    <string name="mc_gradient_2_colors">2 Colors Gradients</string>
    <string name="mc_gradient_3_colors">3 Colors Gradients</string>
    <string name="mc_gradient_colors">Gradients</string>
    <string name="mc_custom_color">Custom Color</string>
    <string name="mc_pick_color">Pick a Color</string>
    <string name="mc_save_theme">Save Theme</string>
    <string name="mc_hex_code">Hex Code</string>
    <string name="mc_cancel">Cancel</string>

    <!-- Theme Names -->
    <string name="mc_theme_one">Basic</string>
    <string name="mc_theme_two">Blue</string>
    <string name="mc_theme_three">Orange 1</string>
    <string name="mc_theme_four">Orange 2</string>
    <string name="mc_theme_five">Fuchsia</string>
    <string name="mc_theme_six">Pink</string>
    <string name="mc_theme_seven">Brown</string>
    <string name="mc_theme_eight">Red</string>
    <string name="mc_theme_nine">Green</string>
    <string name="mc_theme_gradient_one">Gradual 1</string>
    <string name="mc_theme_gradient_two">Gradual 2</string>
    <string name="mc_theme_gradient_three">Gradual 3</string>
    <string name="mc_theme_gradient_four">Gradual 4</string>
    <string name="mc_theme_gradient_five">Gradual 5</string>
    <string name="mc_theme_gradient_six">Gradual 6</string>
    <string name="mc_theme_gradient_seven">Gradual 7</string>
    <string name="mc_theme_custom">Custom</string>

    <!-- Additional Solids -->
    <string name="mc_theme_black">Pure Black</string>
    <string name="mc_theme_white">Pure White</string>
    <string name="mc_theme_cyan">Cyan</string>
    <string name="mc_theme_magenta">Magenta</string>
    <string name="mc_theme_yellow">Yellow</string>
    <string name="mc_theme_teal">Teal</string>
    <string name="mc_theme_purple">Purple</string>
    <string name="mc_theme_navy">Navy</string>

    <!-- 2-Color Gradients -->
    <string name="mc_theme_sunset">Sunset</string>
    <string name="mc_theme_sea_blue">Sea Blue</string>
    <string name="mc_theme_mango">Mango</string>
    <string name="mc_theme_purple_love">Purple Love</string>
    <string name="mc_theme_peach">Peach</string>
    <string name="mc_theme_light_purple">Light Purple</string>
    <string name="mc_theme_deep_space">Deep Space</string>
    <string name="mc_theme_cristal">Cristal</string>
    <string name="mc_theme_emerald">Emerald</string>
    <string name="mc_theme_relief">Relief</string>
    <string name="mc_theme_morpheus">Morpheus</string>
    <string name="mc_theme_shadow">Shadow</string>
    <string name="mc_theme_copper">Copper</string>
    <string name="mc_theme_aura">Aura</string>
    <string name="mc_theme_vast">Vast</string>
    <string name="mc_theme_horizon">Horizon</string>
    <string name="mc_theme_grit">Grit</string>
    <string name="mc_theme_blood">Blood</string>
    <string name="mc_theme_lime">Lime</string>
    <string name="mc_theme_frost">Frost</string>
    <string name="mc_theme_lush">Lush</string>
    <string name="mc_theme_aqua">Aqua</string>
    <string name="mc_theme_youtube">YouTube</string>
    <string name="mc_theme_cool_sky">Cool Sky</string>
    <string name="mc_theme_mighty_blue">Mighty Blue</string>
    <string name="mc_theme_evening">Evening</string>
    <string name="mc_theme_kyoto">Kyoto</string>
    <string name="mc_theme_kimoby">Kimoby</string>

    <!-- 3-Color Gradients -->
    <string name="mc_theme_rainbow_3">Rainbow 3</string>
    <string name="mc_theme_neon_night">Neon Night</string>
    <string name="mc_theme_ocean_deep">Ocean Deep</string>
    <string name="mc_theme_fire">Fire</string>
    <string name="mc_theme_sky">Sky</string>
    <string name="mc_theme_pastel">Pastel</string>
    <string name="mc_theme_lemonade">Lemonade</string>
    <string name="mc_theme_winter_3">Winter 3</string>
    <string name="mc_theme_galaxy">Galaxy</string>
    <string name="mc_theme_spectrum">Spectrum</string>
    <string name="mc_theme_candy">Candy</string>
    <string name="mc_theme_winter">Winter</string>
    <string name="mc_theme_deep_sea">Deep Sea</string>

    <string-array name="mc_theme_entries">
        <item>@string/mc_theme_one</item>
        <item>@string/mc_theme_two</item>
        <item>@string/mc_theme_three</item>
        <item>@string/mc_theme_four</item>
        <item>@string/mc_theme_five</item>
        <item>@string/mc_theme_six</item>
        <item>@string/mc_theme_seven</item>
        <item>@string/mc_theme_eight</item>
        <item>@string/mc_theme_nine</item>
        <item>@string/mc_theme_gradient_one</item>
        <item>@string/mc_theme_gradient_two</item>
        <item>@string/mc_theme_gradient_three</item>
        <item>@string/mc_theme_gradient_four</item>
        <item>@string/mc_theme_gradient_five</item>
        <item>@string/mc_theme_gradient_six</item>
        <item>@string/mc_theme_gradient_seven</item>
    </string-array>
</resources>